Bug 514445 - "Do not show unused categories" not working
Summary: "Do not show unused categories" not working
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: ux-ui (other bugs)
Version First Reported In: 5.2.1
Platform: Flatpak Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2026-01-11 09:27 UTC by jannis.tschan
Modified: 2026-01-11 16:30 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description jannis.tschan 2026-01-11 09:27:45 UTC
SUMMARY
When I enable the "Do not show unused categories", the unused categories don't dissapear in the "Categories" view. Additionally, the message "Note: Unused categories are not shown by default as selected by settings" is always shown, regardless if the option is enabled or not

STEPS TO REPRODUCE
1. Open a .kmy file with unused categories
2. Go to Settings -> Configure KMyMoney -> General -> Filter and enable "Do not show unused categories" 

OBSERVED RESULT
Unused categories remain visible in the categories tab.
When the option is disabled, the text "Note: Unused categories are not shown by default as selected by settings" is also shown

EXPECTED RESULT
Unused categories would dissapear, as suggested by the message in the UI
The UI message doesn't appear when the option is disabled

SOFTWARE/OS VERSIONS
KMyMoney: 5.2.1
Alkimia: 8.2.1 (build against 8.2.1)
Aqbanking: Unknown (build against 6.9.0)
Gpgme: Unknown (build against 1.24.3)
Gwenhywfar: Unknown (build against 5.14.1)
KDiagram: Unknown (build against )
libical: Unknown (build against 3.0.20)
libofx: Unknown (build against 7.0.4)
SQLCipher: Unknown (build against 3.46.1)
KDE Frameworks: 6.21.0
Qt: Using 6.10.1 and built against 6.10.1
Flatpak
KDE Flatpak runtime (Wayland)
Build ABI: x86_64-little_endian-lp64
Kernel: linux 6.18.3-arch1-1
Comment 1 Thomas Baumgart 2026-01-11 16:22:02 UTC
Git commit 0a92fe9198f086e046651b1813cacca17b181c5b by Thomas Baumgart.
Committed on 11/01/2026 at 16:21.
Pushed by tbaumgart into branch 'master'.

Fix option to hide unused categories
FIXED-IN: 5.2.2

M  +3    -0    kmymoney/views/kcategoriesview.cpp

https://invent.kde.org/office/kmymoney/-/commit/0a92fe9198f086e046651b1813cacca17b181c5b
Comment 2 Thomas Baumgart 2026-01-11 16:30:25 UTC
Git commit eda3fb14ad349698dbf413cfb387dcdde0ad5a43 by Thomas Baumgart.
Committed on 11/01/2026 at 16:29.
Pushed by tbaumgart into branch '5.2'.

Fix option to hide unused categories
FIXED-IN: 5.2.2
(cherry picked from commit 0a92fe9198f086e046651b1813cacca17b181c5b)

M  +3    -0    kmymoney/views/kcategoriesview.cpp

https://invent.kde.org/office/kmymoney/-/commit/eda3fb14ad349698dbf413cfb387dcdde0ad5a43