Fix option to hide unused categories

BUG: 514445
FIXED-IN: 5.2.2
(cherry picked from commit 0a92fe9198f086e046651b1813cacca17b181c5b)